# yeyaxin-trading-agent-site

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: deploy.yml
agent-runner/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
agent-runner/src/agent_runner/: __init__.py  adapter.py  cli_run.py  cli_synthesize.py  dynamo_ledger.py  env.py  meter.py  portfolios_store.py  runner.py  s3_publisher.py  schema.py  server.py  synthesizer.py
infra/cloudfront/: strip-trade.js
infra/lambda/site-rebuild-trigger/: handler.py
scripts/: generate-runs-index.mjs
src/app/: globals.css  layout.tsx  page.tsx
src/app/analyze/: page.tsx
src/app/history/: page.tsx
src/app/portfolio/: page.tsx
src/app/portfolio/[id]/: page.tsx
src/app/runs/[id]/: page.tsx
src/components/: DecisionBadge.tsx  Disclaimer.tsx  Markdown.tsx  PasswordGate.tsx  PortfolioDetail.tsx  RunReport.tsx  SiteHeader.tsx  TickerInPortfolios.tsx  TickerSearch.tsx
src/data/portfolios/: demo-synthesis.json  demo.json
src/data/runs/: aapl-2026-06-10.json  avgo-2026-06-14.json  goog-2026-06-14.json  hood-2026-06-14.json  mu-2026-06-14.json  nflx-2026-06-12.json  nflx-2026-06-14.json  now-2026-06-14.json  nvda-2026-06-10.json  nvda-2026-06-11.json  nvda-2026-06-14.json  pltr-2026-06-14.json  tsla-2026-06-10.json  tsla-2026-06-14.json  vgz-2026-06-14.json
src/lib/: agentClient.ts  cost.ts  finnhub.ts  job-tracker.ts  portfolio-config.ts  portfolio.ts  runs-fetch.ts  runs.ts  synthesis.ts  ticker-state.ts  types.ts
