[project]
name = "yeyaxin-agent-runner"
version = "0.1.0"
description = "Local CLI + HTTP server that runs TradingAgents and emits report JSON for the yeyaxin trading site"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.1",
    "tradingagents>=0.7.0",
    "typer>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runner"]

[project.scripts]
run-analysis = "agent_runner.cli_run:app"
synthesize-portfolio = "agent_runner.cli_synthesize:app"
agent-server = "agent_runner.server:main"
